# tmux-mcp

./: .gitignore  LICENSE  README.md  README_AGENT_CHANNELS.md  claude_desktop_config.json  mcp.json  pyproject.toml  requirements.txt  tmux_mcp_agent_channels.py  tmux_mcp_server.py  tmux_messenger.py  tmux_messenger_uv.py
