[project]
name = "tmux-mcp-server"
version = "0.1.0"
description = "MCP server for controlling tmux sessions"
authors = [{name = "Tmux MCP Developer"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.9.0",
    "pyuv>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pyright>=1.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
tmux-mcp = "tmux_mcp_server:main"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "strict"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"